[package]
name = "event-listener-mvp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tendermint = "0.23.7"
tendermint-abci = "0.23.7"
tendermint-light-client = "0.23.7"
tendermint-rpc = "0.23.7"
colored = "2"

tokio = { version = "1", features = ["full"] }
