[package]
name = "event-listener-mvp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
cosmrs = { version = "0.9.0", features = ["bip32", "rpc", "cosmwasm", "dev"] }

tokio = { version = "1", features = ["full"] }
